package Singheatlh.springboot_backend.entity.enums;

public class AppointmentStatus {
}
