package Singheatlh.springboot_backend.entity.enums;

public enum Role {
    PATIENT,
    CLINIC_STAFF,
    SYSTEM_ADMINISTRATOR

}
