package Singheatlh.springboot_backend.mapper;

public class SystemAdministrator {
}
