@startuml Java_Class_Diagram
!theme plain

' Force standard UML visibility symbols (- + # ~)
skinparam classAttributeIconSize 0
hide circle
skinparam circledCharacterRadius 0

' Clean styling
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #333333
skinparam arrowColor #333333
skinparam arrowThickness 2
skinparam shadowing false
skinparam linetype ortho

' ============================================
' ENUMS
' ============================================

enum Role {
    P (PATIENT)
    C (CLINIC_STAFF)
    S (SYSTEM_ADMINISTRATOR)
}

enum AppointmentStatus {
    Upcoming
    Ongoing
    Completed
    Cancelled
    Missed
}

enum ScheduleType {
    AVAILABLE
    UNAVAILABLE
}

enum QueueStatus {
    CHECKED_IN
    CALLED
    COMPLETED
    NO_SHOW
    FAST_TRACKED
}

' ============================================
' USER HIERARCHY (Inheritance)
' ============================================

class User {
    - userId: UUID (PK)
    - name: String
    - email: String (Unique)
    - telephoneNumber: String
    - role: Role
    - clinicId: Integer
    __
    + getUserId(): UUID
    + getName(): String
    + setName(String): void
    + getEmail(): String
    + setEmail(String): void
    + getTelephoneNumber(): String
    + setTelephoneNumber(String): void
    + getRole(): Role
    + getClinicId(): Integer
    + setClinicId(Integer): void
}

class Patient {
    __
    + getAppointments(): List<Appointment>
    + addAppointment(Appointment): void
}

class ClinicStaff {
    __
    + getClinic(): Clinic
    + setClinic(Clinic): void
}

class SystemAdministrator {
    __
    (no additional methods)
}

Patient -up-|> User
ClinicStaff -up-|> User
SystemAdministrator -up-|> User

User --> Role

' ============================================
' CORE ENTITIES
' ============================================

class Clinic {
    - clinicId: Integer (PK)
    - type: String
    - name: String
    - address: String
    - telephoneNumber: String
    - openingHours: LocalTime
    - closingHours: LocalTime
    __
    + getClinicId(): Integer
    + getType(): String
    + setType(String): void
    + getName(): String
    + setName(String): void
    + getAddress(): String
    + setAddress(String): void
    + getTelephoneNumber(): String
    + setTelephoneNumber(String): void
    + getOpeningHours(): LocalTime
    + setOpeningHours(LocalTime): void
    + getClosingHours(): LocalTime
    + setClosingHours(LocalTime): void
    + getDoctors(): List<Doctor>
}

class Doctor {
    - doctorId: String (PK)
    - name: String
    - clinicId: Integer (FK)
    - appointmentDurationInMinutes: Integer
    __
    + getDoctorId(): String
    + getName(): String
    + setName(String): void
    + getClinicId(): Integer
    + setClinicId(Integer): void
    + getAppointmentDurationInMinutes(): Integer
    + setAppointmentDurationInMinutes(Integer): void
    + getClinic(): Clinic
    + setClinic(Clinic): void
    + getSchedules(): List<Schedule>
    + getAppointments(): List<Appointment>
}

class Appointment {
    - appointmentId: String (PK)
    - patientId: UUID (FK)
    - doctorId: String (FK)
    - startDatetime: LocalDateTime
    - endDatetime: LocalDateTime
    - status: AppointmentStatus
    - cancellationReason: String
    - cancelledBy: UUID
    - cancelledAt: LocalDateTime
    __
    + getAppointmentId(): String
    + getPatientId(): UUID
    + setPatientId(UUID): void
    + getDoctorId(): String
    + setDoctorId(String): void
    + getStartDatetime(): LocalDateTime
    + setStartDatetime(LocalDateTime): void
    + getEndDatetime(): LocalDateTime
    + setEndDatetime(LocalDateTime): void
    + getStatus(): AppointmentStatus
    + setStatus(AppointmentStatus): void
    + getCancellationReason(): String
    + setCancellationReason(String): void
    + getCancelledBy(): UUID
    + setCancelledBy(UUID): void
    + getCancelledAt(): LocalDateTime
    + setCancelledAt(LocalDateTime): void
    + getPatient(): Patient
    + getDoctor(): Doctor
}

class Schedule {
    - scheduleId: String (PK)
    - doctorId: String (FK)
    - startDatetime: LocalDateTime
    - endDatetime: LocalDateTime
    - type: ScheduleType
    __
    + getScheduleId(): String
    + getDoctorId(): String
    + setDoctorId(String): void
    + getStartDatetime(): LocalDateTime
    + setStartDatetime(LocalDateTime): void
    + getEndDatetime(): LocalDateTime
    + setEndDatetime(LocalDateTime): void
    + getType(): ScheduleType
    + setType(ScheduleType): void
    + getDoctor(): Doctor
    + setDoctor(Doctor): void
}

class QueueTicket {
    - ticketId: Integer (PK, Auto-increment)
    - appointmentId: String (FK, Unique)
    - status: QueueStatus
    - checkInTime: LocalDateTime
    - queueNumber: Integer
    - isFastTracked: Boolean
    - fastTrackReason: String
    - ticketNumberForDay: Integer
    - consultationStartTime: LocalDateTime
    - consultationCompleteTime: LocalDateTime
    __
    + getTicketId(): Integer
    + getAppointmentId(): String
    + setAppointmentId(String): void
    + getStatus(): QueueStatus
    + setStatus(QueueStatus): void
    + getCheckInTime(): LocalDateTime
    + setCheckInTime(LocalDateTime): void
    + getQueueNumber(): Integer
    + setQueueNumber(Integer): void
    + getIsFastTracked(): Boolean
    + setIsFastTracked(Boolean): void
    + getFastTrackReason(): String
    + setFastTrackReason(String): void
    + getTicketNumberForDay(): Integer
    + setTicketNumberForDay(Integer): void
    + getConsultationStartTime(): LocalDateTime
    + setConsultationStartTime(LocalDateTime): void
    + getConsultationCompleteTime(): LocalDateTime
    + setConsultationCompleteTime(LocalDateTime): void
    + getAppointment(): Appointment
    + getClinicId(): Integer
    + getDoctorId(): String
    + getPatientId(): UUID
}

class MedicalSummary {
    - summaryId: String (PK)
    - appointmentId: String (FK)
    - treatmentSummary: String
    __
    + getSummaryId(): String
    + getAppointmentId(): String
    + setAppointmentId(String): void
    + getTreatmentSummary(): String
    + setTreatmentSummary(String): void
}

' ============================================
' RELATIONSHIPS
' ============================================

Clinic "1" -- "*" Doctor : has >
Doctor "1" -- "*" Schedule : has >
Doctor "1" -- "*" Appointment : has >
Patient "1" -- "*" Appointment : makes >
Appointment "1" -- "0..1" QueueTicket : has >
Appointment "1" -- "0..1" MedicalSummary : has >
ClinicStaff "*" -- "1" Clinic : works at >

Appointment --> AppointmentStatus
Schedule --> ScheduleType
QueueTicket --> QueueStatus

' ============================================
' NOTES
' ============================================

note right of User
    **SINGLE_TABLE Inheritance Strategy**

    All user types stored in ONE table: "user_profile"
    Discriminator column: "role" (P/C/S)

    **clinicId field:**
    - NOT NULL for ClinicStaff (role='C')
    - NULL for Patient (role='P')
    - NULL for SystemAdministrator (role='S')

    JPA automatically handles this via discriminator.
end note

note right of Appointment
    **Central Entity**

    Links Patient, Doctor, QueueTicket, and MedicalSummary.
    Tracks cancellation with reason and timestamp.
    Status lifecycle: Upcoming → Ongoing → Completed/Cancelled/Missed
end note

note right of QueueTicket
    **Queue Management**

    One-to-one relationship with Appointment.
    Tracks patient check-in and queue position.

    Flow: CHECKED_IN → CALLED → COMPLETED
    Alternative: CHECKED_IN → NO_SHOW
    Fast-track: FAST_TRACKED → COMPLETED

    Unique constraint on appointmentId.
end note

note right of Schedule
    **Doctor Availability**

    Represents doctor availability periods.
    Unique constraint: (doctorId, startDatetime, endDatetime)

    Types:
    - AVAILABLE: Doctor can take appointments
    - UNAVAILABLE: Doctor on leave/break
end note

note right of MedicalSummary
    **Medical Record**

    Stores treatment summary for each appointment.
    Created after appointment completion.
    One-to-one with Appointment.
end note

@enduml
